# shivlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  jemalloc.cpp
include/ShivLib/: algorithm.hpp  array.hpp  concepts.hpp  cstddef.hpp  exception.hpp  functional.hpp  iterators.hpp  matrix.hpp  memory.hpp  typeTraits.hpp  type_traits.hpp  utility.hpp  vector.hpp
include/ShivLib/dataStructures/: array.hpp  map.hpp  matrix.hpp  string.hpp  string_view.hpp  vector.hpp
include/ShivLib/experimental/: lazy_evaluation.hpp  lua_bind.hpp  ranges.hpp
include/ShivLib/multithreading/: mutex.hpp  thread.hpp
test/: CMakeLists.txt  algorithm_test.cpp  arrayTest.cpp  array_test.cpp  experimentalTest.cpp  experimental_test.cpp  functional_test.cpp  matrixTest.cpp  matrix_test.cpp  string_view_test.cpp  typeTraitsTest.cpp  type_traits_test.cpp  unitTest.cpp  utility_test.cpp  vectorTest.cpp  vector_test.cpp
